<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.eventapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.eventapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_search2"
        android:name="com.example.eventapp.navigation_search"
        android:label="@string/Search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_bookmark2"
        android:name="com.example.eventapp.navigation_bookmark"
        android:label="@string/Bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/nagivation_profile"
        android:name="com.example.eventapp.nagivation_profile"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
