<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/header2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title_saved_events"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header2">

        <LinearLayout
            android:id="@+id/saved1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="2dp"
            app:cardCornerRadius="9dp">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:adjustViewBounds="true"
                android:background="@drawable/football"
                android:gravity="left"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/row1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/icon1"
                    android:layout_weight="1"
                    android:text="@string/sfootball1"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/row2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sfootball2"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/row3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sfootball3"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saved2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                android:adjustViewBounds="true"
                android:background="@drawable/redbird"
                android:gravity="left"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/row4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/icon2"
                    android:layout_weight="1"
                    android:text="@string/sredbird1"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/row5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sredbird2"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/row6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/sredbird3"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saved3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/saved1">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                android:adjustViewBounds="true"
                android:background="@drawable/cloud"
                android:gravity="left"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/row7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/icon3"
                    android:layout_weight="1"
                    android:text="@string/scloud1"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/row8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/scloud2"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/row9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/scloud3"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saved4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/saved1">

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                android:adjustViewBounds="true"
                android:background="@drawable/tulip"
                android:gravity="left"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/row10"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/icon4"
                    android:layout_weight="1"
                    android:text="@string/stulip1"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/row11"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/stulip2"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/row12"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/stulip3"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>