<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title_notifications"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="9dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/post"
                    android:gravity="left"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/text_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/post"
                android:textSize="20dp"
                android:textColor="@color/white"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="9dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/soundvision"
                    android:gravity="left"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/soundvision"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="9dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/tulip"
                    android:gravity="left"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tulip"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="9dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/redbird"
                    android:gravity="left"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/redbird"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="9dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/cloud"
                    android:gravity="left"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cloud"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="2dp"
                app:cardCornerRadius="9dp">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/eat"
                    android:gravity="left"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/eat"
                android:textSize="20dp"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>